# poppler-rs

./: Cargo.toml
poppler-sys/: Cargo.toml  README.md  build.rs
poppler-sys/src/: lib.rs  vendored_bindings.rs
poppler-sys/src/vendored_bindings/: bindings_poppler.rs  bindings_poppler_action.rs  bindings_poppler_annot.rs  bindings_poppler_attachment.rs  bindings_poppler_document.rs  bindings_poppler_form_field.rs  bindings_poppler_layer.rs  bindings_poppler_media.rs  bindings_poppler_movie.rs  bindings_poppler_page.rs
src/: document.rs  lib.rs  page.rs  util.rs
tests/: test.rs
