[package]
authors = [
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "Denys Vitali <denys@denv.it>"
]
name = "poppler"
license = "GPL-2.0"
version = "0.3.1"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[dependencies]
poppler-sys = { version = "0.1.0", path = "poppler-sys" }
cairo-rs =  { git = "https://github.com/gtk-rs/cairo", features = ["v1_16", "use_glib", "png", "pdf"] }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
glib = { git = "https://github.com/gtk-rs/glib" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }

[features]
default = []
generate-bindings = ["poppler-sys/generate-bindings"]
