[package]
authors = [
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "Denys Vitali <denys@denv.it>"
]
name = "poppler"
license = "GPL-2.0"
version = "0.3.1"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[dependencies]
poppler-sys = { version = "0.1.0", path = "poppler-sys" }
cairo-rs =  { version = "0.9.1", features = ["v1_16", "use_glib", "png", "pdf"] }
cairo-sys-rs = { version = "0.10.0" }
glib = { version = "0.10.3" }
glib-sys = { version = "0.10.1" }
gobject-sys = { version = "0.10.0" }

[features]
default = []
generate-bindings = ["poppler-sys/generate-bindings"]
